<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/inputMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/string_value"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/inputInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/string_info"
        android:inputType="text" />
    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_ok" />
    <CheckBox
        android:id="@+id/bankCardChkBx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_card"/>
    <CheckBox
        android:id="@+id/mobilePhoneChkBx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_mobile"/>
    <CheckBox
        android:id="@+id/cashAddressChkBx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_cash"/>
</LinearLayout>
